RESOLVED FIXED253944
Invalidate scope-breaking :has(:is(...)) selectors more thoroughly
https://bugs.webkit.org/show_bug.cgi?id=253944
Summary Invalidate scope-breaking :has(:is(...)) selectors more thoroughly
Attachments
Radar WebKit Bug Importer
Comment 1 2023-03-15 12:41:11 PDT
Radar WebKit Bug Importer
Comment 2 2023-03-26 20:55:36 PDT
Cameron McCormack (:heycam)
Comment 3 2023-09-07 21:25:19 PDT
Cameron McCormack (:heycam)
Comment 4 2023-09-08 16:04:57 PDT
EWS
Comment 5 2023-09-15 14:16:48 PDT
Committed 268038@main (3724105055b3): <https://commits.webkit.org/268038@main> Reviewed commits have been landed. Closing PR #17571 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.